WIP debug android

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -120,6 +120,8 @@ android {
     }
     buildTypes {
         debug {
+            debuggable true
+            minifyEnabled false
             signingConfig signingConfigs.debug
         }
         release {
