Update package.json to include all files in libs

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jestEnv.mjs",
     "cpp/**/*.{h,cpp}",
     "apple/**",
-    "libs/apple/*.xcframework/**",
+    "libs/**",
     "react-native-skia.podspec",
     "scripts/setup-canvaskit.js",
     "dist/**"
